css spacing issues fixed

--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -23,6 +23,8 @@ h1 {
   font-family: "Inter", sans-serif;
   font-family: "Quicksand", sans-serif;
   text-align: center;
+  padding-top: 1%;
+  padding-bottom: 1%;
   margin: auto;
   margin-top: 1%;
   margin-left: 25%;
@@ -35,10 +37,10 @@ h1 {
   align-content: space-evenly;
   align-items: stretch;
   color: whitesmoke;
-  padding-top: 1rem;;
+  padding-top: 1%;;
   padding-left: 5%;
   padding-right:5%;
-  padding-bottom: 1rem;
+  padding-bottom: 1%;
   margin: auto;
   margin-top: 1%;
   border-radius: 10px;
@@ -70,7 +72,7 @@ h1 {
   flex-direction: row;
   align-items: center;
   align-content: space-around;
-  column-gap: 100px;
+  column-gap: 10%;
   /* padding: 120px; */
   /* padding-left: 10%; */
   width: 100%;
@@ -80,7 +82,7 @@ button {
   font-family: "Inter", sans-serif;
   font-family: "Quicksand", sans-serif;
   background-color: #ea4c89;
-  width: 100%;
+  width: 30%;
   border-radius: 8px;
   border-style: none;
   color: whitesmoke;
@@ -88,7 +90,7 @@ button {
   display: inline-block;
   font-weight: 500;
   outline: none;
-  padding: 1%;
+  padding: 8%;
   margin: 1.5%;
   position: relative;
   text-align: center;
